1.新增webview功能；2.新增自定义导航栏

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="alpha_blue">#206d95e5</color>
+    <color name="black">#20050505</color>
 </resources>
